# zkGPT

./: .gitignore  README.md  build.sh  llm.sh
src/: CMakeLists.txt  global_var.hpp  hyrax.hpp  hyrax_rp.cpp  hyrax_rp.hpp  hyrax_util.hpp  main_demo_llm.cpp  models.cpp  models.hpp  neuralNetwork.cpp  neuralNetwork.hpp  prover.hpp  range_prover.cpp  range_prover.hpp  verifier.cpp  verifier.hpp
